--- a/src/components/Certificates/Certificates.css
+++ b/src/components/Certificates/Certificates.css
@@ -6,6 +6,7 @@
     align-items: center;
     flex-direction: column;
     margin-top: 250px;
+    position: relative;
 }
 
 .certificates>div>h2 {
@@ -36,13 +37,18 @@
     margin: 45px 0;
 }
 
-.certificates__list>div {
+.certificate {
     width: 33%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     margin: 25px 0;
+
+}
+
+.certificates__list>div>img {
+    cursor: pointer;
 }
 
 .name {
@@ -61,18 +67,23 @@
 }
 
 
+
+
 @media screen and (min-width: 320px) and (max-width: 728px) {
     .certificates>div>h2 {
         font-size: 30px;
-    } 
+    }
+
     .certificates__list>div {
         min-width: 100%;
         margin: 25px 0;
     }
+
     .certificates {
         height: 500px;
         margin-top: 50px;
     }
+
     .certificate__header {
         display: flex;
         justify-content: space-between;
